packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__variable_assignment__const _x = 1            let x  = (_x);            x __= (1 - 1);            .snap
---
source: packages/llvm/src/tests/variable_declaration/variable_assignment.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x = alloca double, align 8
  store double 1.000000e+00, double* %_x, align 8
  %x = alloca double, align 8
  %"1" = load double, double* %_x, align 8
  store double %"1", double* %x, align 8
  %"5" = load double, double* %x, align 8
  %"6" = fdiv double %"5", 0.000000e+00
  store double %"6", double* %x, align 8
  ret void
}

